# agentic

./: .env  pyproject.toml
deploy/: config_Lllma4.yaml  config_Qwen.yaml  config_QwenEmbedded.yaml  config_Thalle.yaml  config_Typhoon12b.yaml  host.py  host.sh
notebooks/: agentapi.ipynb  agentpipeline.ipynb  agents.ipynb  baseline.ipynb  example.ipynb  experiment.ipynb  talae_full.csv
submission/: baseline.csv  result_df.csv  result_talea_rag.csv  talae_full.csv  talea.csv
utils/: graph.py
