[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.8.1",
    "bitsandbytes>=0.46.0",
    "kaggle>=1.7.4.5",
    "langchain>=0.3.26",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "openai>=1.90.0",
    "pandas>=2.3.0",
    "peft>=0.15.2",
    "protobuf>=6.31.1",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torch-summary>=1.4.5",
    "transformers>=4.52.4",
    "trl>=0.19.0",
    "unsloth>=2024.8",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
